--- a/my-adblocker/manifest.json
+++ b/my-adblocker/manifest.json
@@ -8,6 +8,7 @@
     "declarativeNetRequestWithHostAccess",
     "declarativeNetRequestFeedback",
     "activeTab",
+    "storage",
     "scripting",
     "webNavigation"
   ],
